--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 body {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #0D0D0D, #1A1A1A, #333333, #0F111A);
+    background:#464539;
 }
 
 #chatbot-toggler {
